--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
-spring.application.name=Datenbank
+# ===============================
+# H2 Datenbank
+# ===============================
+spring.datasource.url=jdbc:h2:./datenbank;AUTO_SERVER=TRUE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# ===============================
+# JPA / Hibernate
+# ===============================
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+
+# ===============================
+# SQL Initialdaten
+# ===============================
+spring.sql.init.mode=always
+
+# ===============================
+# H2 Console (optional)
+# ===============================
+spring.h2.console.enabled=true
