connect h2 database inspector

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,16 @@
-# ===============================
 # H2 Datenbank
-# ===============================
 spring.datasource.url=jdbc:h2:./datenbank;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 
-# ===============================
-# JPA / Hibernate
-# ===============================
+# JPA
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 
-# ===============================
-# SQL Initialdaten
-# ===============================
+# SQL Init
 spring.sql.init.mode=always
 
-# ===============================
-# H2 Console (optional)
-# ===============================
+# H2 Console
 spring.h2.console.enabled=true
